--- a/index.html
+++ b/index.html
@@ -5,93 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>https://marykotliar.github.io/goit-markup-hw-01/</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-<Header>
-    <nav>
-      <a href=""><span>Web</span>Studio</a>
-      <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+<Header class="header">
+    <nav class="header-nav">
+        <a class="header-logo link" href=""><span class="span-web">Web</span>Studio</a>
+        <ul class="header-list list">
+        <li class="header-item"><a class="header-link link current" href="./index.html">Студия</a></li>
+        <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+        <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
 
-      </ul>
+        </ul>
     </nav>
 
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel.:+380961111111"></a> +38 096 111 11 11</li>
+    <ul class="header-contact list">
+        <li class="header-mail"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-tel"><a class="contact-link link"  href="tel.:+380961111111"> +38 096 111 11 11</a></li>
     </ul>
 </Header>
 <main>
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+    <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
     </section>
-    <section>
-        <h2>Наши сильные стороны</h2>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    <section class="advantages">
+        <h2 class="">Наши сильные стороны</h2>
+        <ul class="advantages-list list">
+            <li class="advantages-item">
+                <h3 class="advantages-title">Внимание к деталям</h3>
+                <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Пунктуальность</h3>
+                <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Планирование</h3>
+                <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 
             </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Современные технологии</h3>
+                <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="./image/img-min.jpg" alt="Программирование" width="370"></li>
-            <li><img src="/goit-markup-hw-01/image/img1-min.jpg" alt="Программирование приложений для смартфона" width="370"></li>
-            <li><img src="/goit-markup-hw-01/image/img2-min.jpg" alt="Работа с цветом" width="370"></li>
+    <section class="about">
+        <h2 class="about-title">Чем мы занимаемся</h2>
+        <ul class="about-list list">
+            <li class="about-item"><img src="./image/img-min.jpg" alt="Программирование" width="370"></li>
+            <li class="about-item"><img src="./image/img1-min.jpg" alt="Программирование приложений для смартфона" width="370"></li>
+            <li class="about-item"><img src="./image/img2-min.jpg" alt="Работа с цветом" width="370"></li>
         </ul>
     </section>
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-            <img src="./image/img-minn.jpg" alt="Игорь Демьяненко" width="270">
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+    <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list" >
+            <li class="team-item">
+                <img src="./image/img-minn.jpg" alt="Игорь Демьяненко" width="270">
+                <h3 class="team-item-title">Игорь Демьяненко</h3>
+                <p  class="team-item-text" lang="en">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./image/img(1)-min.jpg" alt="Ольга Репина" width="270">
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
+                <h3 class="team-item-title">Ольга Репина</h3>
+                <p class="team-item-text" lang="en">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./image/img(2)-min.jpg" alt="Николай Тарасов" width="270">
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
+                <h3 class="team-item-title">Николай Тарасов</h3>
+                <p  class="team-item-text" lang="en">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./image/img3-min.jpg" alt="Михаил Ермаков" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
+                <h3 class="team-item-title">Михаил Ермаков</h3>
+                <p class="team-item-text" lang="en">UI Designer</p>
             </li>
             
         </ul>
     </section>
 </main>
-<footer>
-    <a href=""><span>Web</span>Studio</a>
-    <address>
+<footer class="footer">
+    <a class="footer-logo link" href=""><span class="span-web">Web</span>Studio</a>
+    <address class="footer-address">
         <p> г. Киев, пр-т Леси Украинки, 26 <br></p>
-        <ul>
-         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br></li>
-         <li><a href="tel.:+380961111111"> +38 096 111 11 11</a></li>
+        <ul class="footer-contact list">
+        <li class="footer-mail"><a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a> <br></li>
+        <li class="footer-tel"><a class="tel-link link" href="tel.:+380961111111"> +38 096 111 11 11</a></li>
         </ul>
     </address>
 </footer>
